samples/_failures_safe/1761471453_9c7de6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a7fa58b.c: In function ‘main’:
./samples/SAFE/__tmp_0a7fa58b.c:204:12: error: missing terminating " character
  204 |     printf("Commands: item_number (0-%d) to select, amount (1-999) to insert,\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0a7fa58b.c:204:5: error: expected expression at end of input
  204 |     printf("Commands: item_number (0-%d) to select, amount (1-999) to insert,\
      |     ^~~~~~
./samples/SAFE/__tmp_0a7fa58b.c:204:5: error: expected declaration or statement at end of input
